# python-katas-devops

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app.egg-info/: PKG-INFO  SOURCES.txt
app/api/: main.py
app/domain/: shopping.py
k8s/: deployment.yaml  namespace.yaml  service.yaml
tests/domain/: dictionary_test.py  shopping_test.py  words_test.py
