[project]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29"
]

[project]
name = "python-katas-devops"
version = "0.1.0"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
